# 3sx

./: .gitignore  CMakeLists.txt  README.md  build-deps.sh  cleanps2.py
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml
include/: mw_stdarg.h  types.h
include/bin2obj/: common.h
include/cri/: cri_adxf.h  cri_adxt.h  cri_xpts.h  sj.h
include/cri/ee/: adx_ps2.h  cri_mw.h
include/port/sdl/: sdl_config.h  sdl_debug_config.h  sdl_debug_overlay.h  sdl_input_config.h  sdl_pad.h  sdl_settings.h  sdl_video_config.h
include/port/sound/: spu.h
include/sdk/: eekernel.h  eeregs.h
include/sf33rd/AcrSDK/MiddleWare/PS2/CapSndEng/: eflSifRpc.h
include/sf33rd/Source/Game/: EFF22.h  EFF24.h  EFF82.h  EFF83.h  EFFC1.h  bg_data.h
libco/: aarch64.c  amd64.c  arm.c  fiber.c  libco.c  ppc.c  ppc64v2.c  riscv.c  settings.h  sjlj.c  ucontext.c  x86.c
src/cri/libadxe/: adx_amp.c  adx_bahx.c  adx_baif.c  adx_bau.c  adx_bsc.c  adx_bsps.c  adx_bwav.c  adx_dcd.c  adx_dcd5.c  adx_fs.c  adx_inis.c  adx_mps2.c  adx_rnap.c  adx_sjd.c  adx_tlk.c  adx_tsvr.c  cri_cvfs.c  cri_srd.c  dvci_sub.c  htci.c  htci_sub.c  lsc.c  lsc_err.c  lsc_svr.c  sjr_clt.c  svm.c
src/port/: resources.c  utils.c
src/port/sdk/: sdk_libpad2.c
src/port/sdl/: sdl_app.c  sdl_config.c  sdl_debug_config.c  sdl_debug_overlay.c  sdl_input_config.c  sdl_pad.c  sdl_settings.c  sdl_video_config.c
src/port/sound/: emlShim.c  spu.c
src/sf33rd/AcrSDK/MiddleWare/PS2/: acrmw.c
src/sf33rd/AcrSDK/MiddleWare/PS2/CapSndEng/: cse.c  eflSifRpc.c  emlSndDrv.c
src/sf33rd/AcrSDK/common/: prilay.c
src/sf33rd/AcrSDK/ps2/: flps2debug.c  flps2vram.c  foundaps2.c
src/sf33rd/Source/Game/: CHARSET.c  CMD_MAIN.c  Com_Pl.c  Com_Sub.c  DC_Ghost.c  DEMO00.c  EFF00.c  EFF02.c  EFF03.c  EFF04.c  EFF07.c  EFF09.c  EFF11.c  EFF13.c  EFF15.c  EFF18.c  EFF19.c  EFF21.c  EFF22.c  EFF23.c  EFF24.c  EFF25.c  EFF26.c  EFF27.c  EFF29.c  EFF30.c  EFF31.c  EFF32.c  EFF33.c  EFF34.c  EFF37.c  EFF38.c  EFF40.c  EFF41.c  EFF42.c  EFF44.c  EFF46.c  EFF47.c  EFF48.c  EFF49.c  (+211 more)
src/sf33rd/Source/Game/animation/: app_data.c  appear.c  lose_pl.c  win_pl.c
src/sf33rd/Source/Game/com/: com_pl.c  com_sub.c
src/sf33rd/Source/Game/com/active/: active10.c
src/sf33rd/Source/Game/com/passive/: pass10.c
src/sf33rd/Source/Game/com/shell/: shell03.c
src/sf33rd/Source/Game/debug/: Debug.c  Nakai.c
src/sf33rd/Source/PS2/: ps2Quad.c  ps2main.c
src/sf33rd/Source/PS2/mc/: knjsub.c
zlib/: adler32.c  compress.c  crc32.c  deflate.c  deflate.h  infblock.c  infblock.h  infcodes.c  infcodes.h  inffast.c  inffast.h  inffixed.h  inflate.c  inftrees.c  inftrees.h  infutil.c  infutil.h  trees.c  trees.h  uncompr.c  zconf.h  zlib.h  zutil.c  zutil.h
